# MSM-GPU

./: BENCHMARK_GUIDE.py  BENCHMARK_RESULTS_SUMMARY.md  CMakeLists.txt  README.md  README_BENCHMARKS.md  audit_results.csv  benchmark_results.csv  gen_plots.py  performance.csv  plot_benchmarks.py  run_benchmarks.sh
benchmarks/: QUICKSTART.md  README.md  SETUP_SUMMARY.md  analyze_results.py  benchmark.sh  benchmark_N1000000.csv  benchmark_N10000000.csv  benchmark_N20000000.csv  benchmark_N35000000.csv  benchmark_N5000000.csv  benchmark_N50000000.csv  benchmark_N60000000.csv  benchmark_final_all.csv  benchmark_results.csv  create_dataset_from_existing.py  generate_plots.py  performance.csv  run_benchmark.py
include/: bn254_params.cuh  cuda_utils.cuh  ec_bn254.cuh  field_bn254.cuh  kernels.cuh  msm_plan.hpp  scalar_bn254.cuh
src/: kernels.cu  main.cu
